--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,15 +7,21 @@
     tools:context="fr.wcs.wcstravel.ListActivity">
 
     <TextView
-        android:id="@+id/resultComp"
+        android:id="@+id/resultCompList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/resultDateDes"
+        android:layout_marginTop="12dp"
          />
 
     <TextView
         android:id="@+id/resultDateDep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/resultCompList"
+        android:layout_marginTop="26dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="33dp" />
 
@@ -23,6 +29,10 @@
         android:id="@+id/resultDateDes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/resultDateDep"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="45dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="63dp" />
 
@@ -30,6 +40,9 @@
         android:id="@+id/resultPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/resultDateDes"
+        android:layout_below="@+id/resultDateDes"
+        android:layout_marginTop="39dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="94dp" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
