--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,27 +6,30 @@
     android:layout_height="match_parent"
     tools:context="fr.wcs.wcstravel.MainActivity">
 
-    <EditText
-        android:id="@+id/aeroDep"
-        android:layout_width="wrap_content"
+    <Spinner
+        android:id="@+id/departure"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Aeroport départ" />
+        >
 
-    <EditText
-        android:id="@+id/aeroDes"
-        android:layout_width="wrap_content"
+    </Spinner>
+
+    <Spinner
+        android:id="@+id/destination"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/aeroDep"
-        android:layout_marginTop="18dp"
+        android:layout_below="@+id/departure"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Aeroport destination" />
+        >
+
+    </Spinner>
+
+
 
     <android.support.design.widget.TextInputLayout
-        android:layout_below="@id/aeroDes"
+        android:layout_below="@id/destination"
         android:id="@+id/dateDep"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="20dp"
