--- a/app/src/main/res/layout/list_fly_item.xml
+++ b/app/src/main/res/layout/list_fly_item.xml
@@ -12,6 +12,7 @@
 
         <TextView
             android:id="@+id/resultComp"
+            android:text="kokokokkokokoko"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -21,42 +22,40 @@
 
         <TextView
             android:id="@+id/resultDateDep"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/resultCompList"
-            android:layout_marginTop="26dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="12dp"
+            android:text="kokokokkokokoko"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="33dp" />
 
         <TextView
             android:id="@+id/resultDateDes"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/resultDateDep"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="45dp"
+            android:layout_alignBaseline="@+id/resultDateDep"
+            android:layout_alignBottom="@+id/resultDateDep"
+            android:layout_marginStart="12dp"
+            android:layout_toEndOf="@+id/resultComp"
+            android:text="kokokokkokokoko"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="63dp" />
 
         <TextView
             android:id="@+id/resultPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/resultDateDes"
-            android:layout_below="@+id/resultDateDes"
-            />
 
-        <TextView
-            android:id="@+id/resultPriceConvert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="11dp"
-            android:layout_marginStart="37dp"
-            android:layout_toEndOf="@+id/resultPrice"
-            />
+            android:layout_alignStart="@+id/resultComp"
+            android:text="kokokokkokokoko" />
+
+
 
     </RelativeLayout>
 
